# tensor-parallel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_comm.py
examples/: pipeline_example.py  tp_mlp.py  tp_transformer.py
tensor_parallel/: __init__.py  async_comm.py  column_parallel.py  comm.py  layers.py  parallel_embedding.py  pipeline.py  row_parallel.py  sequence_parallel.py  utils.py  weight_loader.py
tests/: test_comm.py  test_layers.py
