[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-parallel"
version = "0.1.0"
description = "Minimal tensor and pipeline parallelism from scratch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["tensor_parallel*"]
